...
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/run_name_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Laguna Run"
                android:inputType="text|textAutoComplete"
                android:visibility="visible"
...
                android:textSize="18sp"
                bind:layout_constraintBottom_toBottomOf="parent"
                bind:layout_constraintStart_toStartOf="parent"
                bind:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/starting_point_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:hint="Penny Pines"
                android:inputType="text|textAutoComplete"
                android:visibility="visible"
...
